--- a/style.css
+++ b/style.css
@@ -46,10 +46,10 @@ body {
 }
 
 .option-button {
-    background-color: #28a745;
-    color: #ffffff;
+    background-color: #1fa2d3;
+    color: #f5f5f5;
     border: none;
-    padding: 10px;
+    padding: 30px;
     width: 48%;
     font-size: 18px;
     border-radius: 8px;
@@ -57,13 +57,13 @@ body {
     transition: background-color 0.3s ease;
 }
 
-.option-button:hover {
-    background-color: #218838;
-}
+/* .option-button:hover {
+    background-color: #acb;
+} */
 
 .game-message {
-    font-size: 20px;
-    color: green;
+    font-size: 40px;
+    color: black;
     margin-top: 20px;
 }
 
